Fix large flash embeds being hidden behind other elements

--- a/src/css/General.css
+++ b/src/css/General.css
@@ -323,6 +323,9 @@ hr {
   opacity: .2;
 }
 /* /f/ */
+#swf-embed {
+  z-index: 21;
+}
 table.flashListing {
   margin-top: 20px;
   margin-bottom: 20px;
